logs/scraptils.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/scraptils'...
Compiling './lib/python3.5/site-packages/scraptils/alchemize.py'...
***   File "./lib/python3.5/site-packages/scraptils/alchemize.py", line 159
    print createschema(schema, args['db'])
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/scraptils/asdf.py'...
***   File "./lib/python3.5/site-packages/scraptils/asdf.py", line 680
    class = Column(String)
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/scraptils/datainspector'...
Compiling './lib/python3.5/site-packages/scraptils/db_loader.py'...
***   File "./lib/python3.5/site-packages/scraptils/db_loader.py", line 97
    print model['session'].commit()
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/scraptils/dump_schema.py'...
***   File "./lib/python3.5/site-packages/scraptils/dump_schema.py", line 51
    print '%s<div class="schema">%s</div>%s' % (_html_header(),
                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/scraptils/io.py'...
***   File "./lib/python3.5/site-packages/scraptils/io.py", line 31
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/scraptils/sqlize.py'...
***   File "./lib/python3.5/site-packages/scraptils/sqlize.py", line 55
    print '[!] Error - cannot handle value "%r" - %r' % (value, type(value))
                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/scraptils/utils.py'...
***   File "./lib/python3.5/site-packages/scraptils/utils.py", line 33
    except (urllib2.HTTPError, urllib2.URLError), e:
                                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/scraptils-0.2.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
